# centerline-claude-pilot

./: .env.example  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  BUILD.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: agent-eval.yml  ci.yml  eval-improve.yml
centerline-plugin/.claude-plugin/: plugin.json
centerline-plugin/skills/assembling-watchlist-triage/: SKILL.md
centerline-plugin/skills/assessing-output-reliability/: SKILL.md
centerline-plugin/skills/building-client-360/: SKILL.md
cowork/: README.md  verification.md
data/: INDEX.md
data/emails/: thread-1-meridian.md  thread-2-blueline.md  thread-3-crestwood.md  thread-4-arcadia.md
data/structured/: loan_performance_monthly.csv  portfolio_reference.csv  rm_activity_log.csv
data/synthetic/: generate_meridian_package.py
docs/: evals_and_observability.md  hooks_local_cowork.md  mcp_local_cowork.md  scheduled_jobs.md
evals/: GOLDEN.md  agent_eval.py  ci.mcp.json  improve.py  observability.py  runner.py
evals/cases/: foundation.jsonl  track-a.jsonl  track-b.jsonl
evals/results/: latest.md
mcp/centerline_mcp/: __init__.py  core.py  data_access.py  docintel.py  guards.py  package_review.py  pdf_render.py  server.py
mcp/tests/: test_compliance.py  test_docintel.py
presentation/: panel-qa-prep.md  skills-and-mcp-glossary.md  slide-deep-dive.md  speaker-notes.md
presentation/drafts/: deck-outline.md  speaker-notes.md
presentation/slides/: centerline-claude-pilot.md
reference/: INDEX.md
reference/compliance-policy/: 00-purpose.md  01-approved-tools.md  02-data-handling.md  03-permitted-use-cases.md  04-restricted-use-cases.md  05-prohibited-use-cases.md  06-existing-unauthorized-usage.md  07-claude-adoption-program.md  08-escalation.md
reference/personas/: adoption-spectrum.md  common-pain-points.md  marcus-webb.md  sarah-okonkwo.md  tom-deluca.md
reference/shadow-workflows/: 00-setup.md  doesnt-work.md  wf1-draw-letter.md  wf2-relationship-memo.md  wf3-client-email.md  wf4-call-prep.md  wf5-portfolio-summary.md  wishlist.md
reports/: agent_eval.md  crestwood-meeting-prep.md  crestwood-whitmore-email-draft.md  observability.md  summit-annual-review-memo.md
reports/agent_eval/: agent_eval-20260613-022420Z.md  agent_eval-20260613-070407Z.md  agent_eval-20260614-032914Z.md  agent_eval-20260614-035546Z.md  agent_eval-20260614-072430Z.md  agent_eval-20260614-171341Z.md  agent_eval-20260615-041951Z.md  agent_eval-20260615-045809Z.md  agent_eval-20260616-091944Z.md  agent_eval-20260617-090237Z.md  agent_eval-20260618-081915Z.md
reports/improvements/: improvements-20260613-070437Z.md  improvements-20260614-035619Z.md  improvements-20260614-072454Z.md  improvements-20260614-171651Z.md  improvements-20260615-040913Z.md  improvements-20260615-042016Z.md  improvements-20260615-050311Z.md  improvements-20260616-092312Z.md  improvements-20260617-090703Z.md  improvements-20260618-081951Z.md  latest.md
reports/pdf/: README.md  arcadia-draw13-reconciliation_20260614T032444Z.md  arcadia-draw13-reconciliation_20260614T032650Z.md  arcadia-draw13-reconciliation_20260614T032857Z.md  crestwood-meeting-prep_20260614T031625Z.md
solutions/: demo-prompts.md  panel-talking-points.md
solutions/deliverable-a/: recipe.md  what-changed-vs-wf5.md
solutions/deliverable-b/: recipe.md
(+28 files in other folders)
