[project]
name = "centerline-claude-pilot"
version = "0.1.0"
description = "Local MCP server + compliance guards for the Centerline Claude pilot (synthetic data)."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    # doc-intelligence: the classify/extract MCP tools call the Anthropic API with Pydantic-typed,
    # schema-forced structured output (validated deterministically). Key comes from env (ANTHROPIC_API_KEY),
    # never committed. anthropic is imported lazily inside the doc-intel tools so the server still starts
    # without it for the non-doc-intel tools.
    "anthropic>=0.40",
    "pydantic>=2",
    # doc-intel prompts are authored as YAML + Jinja2 templates (config, not hardcoded strings) and rendered
    # at call time by centerline_mcp.prompts.
    "jinja2>=3.1",
    "pyyaml>=6",
    # render_pdf MCP tool: turns a screened artifact (markdown) into a credit-file-grade PDF, host-side so
    # it works in Code AND Cowork. Also used by data/synthetic/generate_meridian_package.py (gets it here).
    "reportlab>=4.0",
]

[tool.uv]
# We run the server via PYTHONPATH (the package lives under mcp/centerline_mcp), so uv only needs to
# manage the *environment* (the mcp SDK) — it does not build/install this repo as a package.
package = false

# Dev tooling (PEP 735 dependency group; uv installs `dev` by default). Pinned in uv.lock so pre-commit
# runs the SAME versions everywhere (the .pre-commit-config.yaml local hooks call these via `uv run`).
[dependency-groups]
dev = [
    "black>=24.10",
    "flake8>=7.1",
    "pre-commit>=3.8",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311"]
# data/ + reference/ markdown are content, not code (black only touches .py anyway; this is belt-and-braces)
extend-exclude = '''/(\.venv|data|reference)/'''
